--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,2 +1,4 @@
-<app-info-display>
-</app-info-display>
+<div class="mainDisplay container">
+<app-nav-bar class="column1"></app-nav-bar>
+<app-info-display class="column2"></app-info-display>
+</div>
